added more technologies

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <div class="row align-items-center justify-content-end connecting-lines d-flex">
             <div class="col-6 text-right">
               <h4>Data Transfer Reliability</h4>
-              <p style="text-align: justify;">Implement Long Range (LoRa) technology to ensure reliable data transfer across rural areas
+              <p style="text-align: justify;">Implement Scalable Wireless sensor network using Long Range (LoRa) technology to ensure reliable data transfer across rural areas
               </p>
             </div>
             <div class="col-2 text-center full d-inline-flex justify-content-center align-items-center">
@@ -343,6 +343,28 @@
                   </div>
                   <p>Streamlit</p>
                 </div>
+                <div class="col-md-2 col-sm-4 col-6 mb-5">
+                  <div class="avatar">
+                    <img src="./Images/tech/lora.jpg" alt="lora">
+                  </div>
+                  <p>LoRa Technology</p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6 mb-5">
+                  <div class="avatar">
+                    <img src="./Images/tech/amazon.png" alt="amazon">
+                  </div>
+                  <p>Amazon</p>
+                </div>
+                <div class="col-md-2 col-sm-4 col-6 mb-5">
+                  <div class="avatar">
+                    <img src="./Images/tech/c.png" alt="c">
+                  </div>
+                  <p>C Language</p>
+                </div>
+
+
+
+
           </div>
         </div>
       </section>
@@ -809,7 +831,7 @@
                       </div>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item">
-						<a class="card-text mr-4" style="cursor: pointer;" href="www.linkedin.com/in/pabasara-munasinghe-29131b281"><i class="fab fa-linkedin-in mr-2"></i>LinkedIn</a>
+						<a class="card-text mr-4" style="cursor: pointer;" href="http://www.linkedin.com/in/pabasara-munasinghe-29131b281"><i class="fab fa-linkedin-in mr-2"></i>LinkedIn</a>
                           <a class="card-text" style="cursor: pointer;" href="mailto:pabasaramunasinghe34@gmail.com"><i class="fas fa-envelope-open-text mr-2"></i></i>E-Mail</a>
                         </li>
                       </ul>
@@ -849,7 +871,7 @@
                   <div class="col-md-6 col-sm-12 contact-details">
                     <div>
                       <p><strong>Contact Details</strong></p>
-                      <p>For further queries please reach us at <a href="mailto: hiranyae1@gmail.com">securesrilnka@gmail.com</a></p>
+                      <p>For further queries please reach us at <a href="mailto: hiranyae1@gmail.com">info@securesrilanka.org</a></p>
                       <p>Hope this project helped you in some manner. Thank you!</p>
                     </div>
                   </div>
