made improvements and changes

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div id="project-scope-right" class="col-md-6 col-sm-12 pt-lg-5">
                   <div class="section-left">
                     <div class="section-figure">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/yfBXsgUUu5I" title="Secure Sri Lanka" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                      <iframe width="100%" height="308" src="https://www.youtube.com/embed/WjV98I19IEw" title="Secure Sri Lanka" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                       <p>Product Demonstration - Solution</p>
                     </div>
                   </div>
@@ -724,7 +724,7 @@
                         </div>
                         <div class="text-group">
                           <p><strong>Department</strong></p>
-                          <p>Department of Gepgraphy</p>
+                          <p>Department of Geography</p>
                         </div>
                       </div>
                       <ul class="list-group list-group-flush">
@@ -782,7 +782,7 @@
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item">
 						<a class="card-text mr-4" style="cursor: pointer;" href="https://www.linkedin.com/in/samiru-j-040540246?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in mr-2"></i>LinkedIn</a>
-                          <a class="card-text" style="cursor: pointer;" href="Samiru@samirugamage.com"><i class="fas fa-envelope-open-text mr-2"></i></i>E-Mail</a>
+                          <a class="card-text" style="cursor: pointer;" href="mailto:samiru@samirugamage.com"><i class="fas fa-envelope-open-text mr-2"></i></i>E-Mail</a>
                         </li>
                       </ul>
                     </div>
