--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                       <div class="timeline-event-copy">
                         <p class="timeline-event-thumbnail">June 2024</p>
                         <h3>Research Paper</h3>
-                        <p>Describes what you contribute to existing knowledge, giving due recognition to all work that you referred in making new knowledge</p>
+                        <p>Describes what we contribute to existing knowledge, giving due recognition to all work that we referred in making new knowledge</p>
                         <p><strong>Marks Allocated : </strong>10</p>
                         <div class="progress">
                           <div class="progress-bar bg-infinity-primary" role="progressbar" style="width: 27%" aria-valuenow="27" aria-valuemin="0" aria-valuemax="100"></div>
